<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Welcome guyss, Please login here!! if you dont have an account please signup first</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Fill in your personal data first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Fill in your personal data first</string>
    <string name="title_login_page">Welcome to StoryApp!</string>
    <string name="name">Name</string>
    <string name="message_main_page">Welcome to StoryApp!</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="name_required">Enter the Name</string>
    <string name="input_email">Enter the Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="input_pass">Enter the Password</string>
    <string name="pass_length">Password at least 8 characters</string>
    <string name="not_valid_data">Invalid Data</string>
    <string name="submit">Submit</string>
    <string name="title">Your Title</string>
    <string name="descriptions">Enter Decription</string>
    <string name="detail">Detail Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Upload Image First</string>
    <string name="failed_to_get_image_uri">Failed to get image URI</string>
    <string name="add_story">Add your story</string>
    <string name="appwidget_text">StoryApp</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="change_language">Change Language</string>
    <string name="more">More</string>
    <string name="english">English</string>
    <string name="indonesia">Indonesia</string>
    <string name="korea">Korea</string>
    <string name="created">Account Created</string>
    <string name="created_at">Created at : %1$s</string>
    <string name="success">Login Success</string>
    <string name="enable_location">Enable Location</string>
    <string name="show_map">Show Map</string>
    <string name="story_location">Story Location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>